--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,11 @@
               "src/styles.scss",
               "node_modules/semantic-ui-css/semantic.min.css"
             ],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js",
-               "node_modules/semantic-ui-css/semantic.min.js"]
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/semantic-ui-css/semantic.min.js",
+              "node_modules/ion-sound/js/ion.sound.min.js"
+            ]
           },
           "configurations": {
             "dev": {
