--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "electron": "^3.0.2",
     "electron-builder": "20.28.1",
     "electron-reload": "1.2.2",
+    "ion-sound": "^3.0.7",
     "jquery": "^3.3.1",
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
