--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "electron-reload": "1.2.2",
     "ion-sound": "^3.0.7",
     "jquery": "^3.3.1",
+    "ng2-dragula": "^2.1.1",
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
     "protractor": "5.3.2",
